--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,12 +10,15 @@
     flex: 50%;
     height: 100%;
     display: flex;
-    align-items: center;
-    padding-left: 150px;
+
+    padding: 2rem 6rem;
   }
   
   .navbar .leftSide img {
-    width: 10px;
+    width: 50px;
+    height: 40px;
+
+    
   }
   
   .navbar .rightSide {
@@ -71,9 +74,14 @@
     .navbar .rightSide a {
       width: 70px;
     }
+
+    .navbar .rightSide button {
+      display: inherit;
+    }
     .navbar .leftSide {
       padding-left: 50px;
     }
+   
   }
   
   @media only screen and (max-width: 600px) {
@@ -86,17 +94,14 @@
       padding-right: 50px;
     }
   
-    .navbar .rightSide button {
-      display: inherit;
-    }
-  }
+     }
   
   @media only screen and (min-width: 600px) {
     .navbar .rightSide button {
       display: none;
     }
   
-    .hiddenLinks {
+    .navbar .hiddenLinks {
       display: none;
     }
   }
